change name of image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="sidebar">
             <!-- profile -->
             <div class="profile">
-                <img src="professional.png" alt="">
+                <img src="durgesh.png" alt="">
                 <h2>Durgesh Kumar</h2>
                 <p>Full-Stack Developer</p>
 
